--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "@babel/core": "^7.16.0",
     "@types/jasmine": "3.6.0",
     "@types/node": "12.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "codelyzer": "6.0.0",
+    "eslint": "^8.12.0",
+    "eslint-config-google": "^0.14.0",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
     "karma": "6.1.0",
